--- a/views/admin/post/index.handlebars
+++ b/views/admin/post/index.handlebars
@@ -2,21 +2,25 @@
 
 <table class="table table-bordered">
     <thead>
-        <tr>
+        <tr class="bg-blue">
+            <th><input type="checkbox" class="form-control"></th>
             <th>ID</th>
             <th>Title</th>
             <th>Status</th>
             <th>Comments</th>
+            <th>Feature Image</th>
             <th>Actions</th>
         </tr>
     </thead>
     <tbody>
         {{#each posts}}
         <tr>
+            <th><input type="checkbox" class="form-control"></th>
             <td>{{id}}</td>
             <td>{{postTitle}}</td>
             <td>{{postStatus}}</td>
             <td>{{allowComment}}</td>
+            <td><img src="/uploads/{{postImage}}" alt="" width="100px" class="img-fluid img-thumbnail"></td>
             <td><a href="/admin/post/edit/{{id}}" class="btn btn-primary"><i class="fa fa-edit"></i></a> 
             <form action="/admin/post/delete/{{id}}?_method=DELETE" method="POST" class="pull-right">
             <button type="submit" class="btn btn-danger"><i class="fa fa-trash"></i></button>
