installed flash and session module

--- a/views/admin/post/edit.handlebars
+++ b/views/admin/post/edit.handlebars
@@ -2,7 +2,7 @@
 
     <div class="row">
         <div class="col-sm-9">
-            <form action="/admin/post/edit/{{post.id}}?_method=PUT" method="POST">
+            <form action="/admin/post/edit/{{post.id}}?_method=PUT" method="POST" enctype="multipart/form-data">
                 <div class="form-group">
                     <label>Post Title</label>
                     
