--- a/views/admin/post/create.handlebars
+++ b/views/admin/post/create.handlebars
@@ -11,13 +11,13 @@
     <div class="form-group">
         <label>Category</label>
         <select name="category" id="category" class="form-control">
-            <option value="1">Magazine</option>
-            <option value="2">Sport</option>
-            <option value="3">Religion</option>
-            <option value="4">Politic</option>
+            {{#each categories}}
+            <option value="{{id}}">{{categoryName}}</option>
+            {{/each}}
         </select>
     </div>
     <div class="form-group">
+        <label for="">Post Status</label>
         <select name="postStatus" id="" class="form-control">
             <option value="draft">Draft</option>
             <option value="public">Public</option>
@@ -43,5 +43,6 @@
         <input type="checkbox" name="allowComment">
         <label>Allow comments</label>
     </div>
-    <button class="btn btn-primary">Submit</button>
+    <button class="btn btn-primary">Create post</button>
+    <a href="/admin/post/index" class="btn btn-info"> Cancel</a>
 </form>
