--- a/views/admin/post/edit.handlebars
+++ b/views/admin/post/edit.handlebars
@@ -1,5 +1,7 @@
 <h1>Edit post</h1>
-
+{{#if update_message}}
+<div class="alert alert-success">{{update_message}}</div>
+{{/if}}
     <div class="row">
         <div class="col-sm-9">
             <form action="/admin/post/edit/{{post.id}}?_method=PUT" method="POST" enctype="multipart/form-data">
@@ -12,10 +14,11 @@
                 <div class="form-group">
                     <label>Category</label>
                     <select name="category" id="category" class="form-control">
-                        <option value="1">Magazine</option>
-                        <option value="2">Sport</option>
-                        <option value="3">Religion</option>
-                        <option value="4">Politic</option>
+                        {{#select post.categoryId}}
+                            {{#each categories}}
+                                <option value="{{id}}">{{categoryName}}</option>
+                            {{/each}}
+                        {{/select}}
                     </select>
                 </div>
                 <div class="form-group">
@@ -37,13 +40,14 @@
                 </div>
                 <div class="form-group">
                     <label>Post content</label>
-                    <textarea name="postContent" id="postContent" cols="30" rows="6" class="form-control" placeholder="Enter your post content">{{post.postContent}}</textarea>
+                    <textarea name="postContent" id="postContent" cols="30" rows="4" class="form-control" placeholder="Enter your post content">{{post.postContent}}</textarea>
                 </div>
                 <div class="form-group">
                     <input type="checkbox" name="allowComment" {{#if post.allowComment}} checked {{/if}}>
                     <label>Allow comments</label>
                 </div>
-                <button class="btn btn-primary">Submit</button>
+                <button class="btn btn-primary">Update post</button>
+                <a href="/admin/post/index" class="btn btn-info"> Cancel</a>
 </form>
         </div>
         <div class="col-sm-3">
