--- a/views/partials/admin/nav.handlebars
+++ b/views/partials/admin/nav.handlebars
@@ -37,6 +37,12 @@
             </li>
           </ul>
         </li>
+         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
+          <a class="nav-link" href="/admin/category/index">
+            <i class="fa fa-fw fa-briefcase"></i>
+            <span class="nav-link-text">Categories</span>
+          </a>
+        </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Example Pages">
           <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseExamplePages" data-parent="#exampleAccordion">
             <i class="fa fa-fw fa-file"></i>
