--- a/views/home/login.handlebars
+++ b/views/home/login.handlebars
@@ -1,7 +1,15 @@
+
+
 <div class="card card-login mx-auto mt-5">
     <div class="card-header">Login</div>
 
     <div class="card-body">
+        {{#if register_user}}
+        <small class="text-success">{{register_user}}</small>
+        {{/if}}
+        {{#if email_exist}}
+        <small class="text-danger">{{email_exist}}</small>
+        {{/if}} 
         <form action="/login" method="post">
             {{#if error}}
                 <div class="alert alert-danger">
