--- a/views/home/register.handlebars
+++ b/views/home/register.handlebars
@@ -1,3 +1,4 @@
+
 <div class="card card-register mx-auto mt-5">
     <div class="card-header">Register an Account</div>
     <div class="card-body">
@@ -5,23 +6,35 @@
             <div class="form-group">
                 <div class="form-row">
                     <div class="col-md-6">
-                        <label for="exampleInputName">First name</label>
-                        <input name="firstName" class="form-control" id="exampleInputName" type="text" aria-describedby="nameHelp" placeholder="Enter first name">
+                        <label for="exampleConfirmPassword">First name
+                        {{#each errors}}
+                        <small class="text-danger">{{firstRequired}}</small>
+                        {{/each}}
+                        </label>
+                        <input name="firstName" class="form-control" id="exampleInputName" type="text" aria-describedby="nameHelp" placeholder="Enter first name" value="{{firstName}}">
                     </div>
                     <div class="col-md-6">
                         <label for="exampleInputLastName">Last name</label>
-                        <input name="lastName" class="form-control" id="exampleInputLastName" type="text" aria-describedby="nameHelp" placeholder="Enter last name">
+                        <input name="lastName" class="form-control" id="exampleInputLastName" type="text" aria-describedby="nameHelp" placeholder="Enter last name" value="{{lastName}}">
                     </div>
                 </div>
             </div>
             <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
-                <input name="email" class="form-control" id="exampleInputEmail1" type="email" aria-describedby="emailHelp" placeholder="Enter email">
+                 <label for="">Email Address
+                {{#each errors}}<small class="text-danger">{{emailRequired}}</small> 
+                {{/each}}
+                
+                </label>
+                <input name="emailAddress" class="form-control" id="exampleInputEmail1" type="email" aria-describedby="emailHelp" placeholder="Enter email" value="{{emailAddress}}">
             </div>
             <div class="form-group">
                 <div class="form-row">
                     <div class="col-md-6">
-                        <label for="exampleInputPassword1">Password</label>
+                       <label for="exampleConfirmPassword">Password  
+                            {{#each errors}}
+                            <small class="text-danger">{{donotmatch}}</small>
+                            {{/each}}
+                        </label>
                         <input name="password" class="form-control" id="exampleInputPassword1" type="password" placeholder="Password">
                     </div>
                     <div class="col-md-6">
