--- a/views/home/single.handlebars
+++ b/views/home/single.handlebars
@@ -33,9 +33,19 @@
           <div class="card my-4">
             <h5 class="card-header">Leave a Comment:</h5>
             <div class="card-body">
-              <form>
+              <form action="/comment/{{post.id}}" method="POST">
+              <div class="form-group">
+                {{#unless user}}
+                <label for="">Full Name</label>
+                <input type="text" name="fullName" placeholder="Full Name" class="form-control">
+              </div>
+              <div class="form-group">
+                <label for="">Email Address</label>
+                <input type="email" name="userEmail" placeholder="Email Address" class="form-control">
+              </div>
+              {{/unless}}
                 <div class="form-group">
-                  <textarea class="form-control" rows="3"></textarea>
+                  <textarea class="form-control" rows="3" placeholder="Leave a comment here" name="commentBody"></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
               </form>
